[workspace]
resolver = "2"
members = [ "macro" ]

[workspace.package]
edition = "2021"
version = "0.1.1"
license = "MIT"
authors = [ "frand-nano <frand.nano@gmail.com>" ]

[package]
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
name = "frand-node"
readme = "README.md"
documentation = "https://docs.rs/frand-node"
repository = "https://https://github.com/frand-nano/frand-node"
description = "A crate providing serde and message handling tools."

[dependencies]
frand-node-macro = { path = "macro" }
log = "0.4"
anyhow = "1.0" # Re-exported: anyhow::Result 
serde = { version = "1.0", features = ["derive"] }
crossbeam = "0.8"
ciborium = "0.2"
futures = "0.3"
tokio = { version = "1.4", features = ["sync", "macros"] }

[profile.release]
debug = true

[dev-dependencies]
simplelog = "0.12"
tokio = { version = "1.4", features = ["rt", "rt-multi-thread", "time", "macros"] }
eframe = "0.29"