[workspace]
resolver = "2"
members = [ "macro" ]

[workspace.package]
edition = "2021"
version = "0.2.1"
license = "MIT"
authors = [ "frand-nano <frand.nano@gmail.com>" ]

[package]
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
name = "frand-node"
readme = "README.md"
documentation = "https://docs.rs/frand-node"
repository = "https://https://github.com/frand-nano/frand-node"
description = "A crate providing serde and message handling tools."

[dependencies]
frand-node-macro = { path = "macro" }
smallvec = "1.13"
rustc-hash = "2.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.2"
tokio = { version = "1.4", features = ["sync", "time", "macros"] }

[dev-dependencies]
log = "0.4"
simplelog = "0.12"
eframe = "0.29"
num = "0.4"
tokio = { version = "1.4", features = ["rt", "rt-multi-thread"] }