[package]
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
name = "frand-node-macro"
readme = "README.md"
documentation = "https://docs.rs/frand-node-macro"
repository = "https://https://github.com/frand-nano/frand-node-macro"
description = "A crate providing derive macros for serde and message handling tools."

[lib]
proc-macro = true

[dependencies]
convert_case = "0.6"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }